<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Diagnosis"
            android:icon="@drawable/ic_diagnosis"
            android:title="@string/diagnosis" />
        <item
            android:id="@+id/Patient_Record"
            android:icon="@drawable/ic_patientrecords"
            android:title="@string/patient_record" />
    </group>

    <item
        android:id="@+id/Communicate"
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/About_Us"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/about_us" />
            <item
                android:id="@+id/Contact_Us"
                android:icon="@drawable/ic_contactus"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
